# libgpiod-zig

./: .gitignore  Makefile.am  README.md  build.zig  build.zig.zon  configure.ac
lib/: Makefile.am
